--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--Toolbar Section-->
     <header>
         <a href="" class="logo">
-            Selma 
+            Selma Hamutenya
         </a>
         <nav class="burger">
             <a href="" class="union">
@@ -21,5 +21,27 @@
             </a>
         </nav>
     </header>
+
+    <!--Headline Section-->
+    <section class="headline"> 
+        <h1 class="primary1">I'm Selma <br> Glad to see <br>you</h1>
+        
+        <p>I’m a software developer!
+            I can help you build a product , 
+            feature or website Look through some 
+            of my work and experience! If you like 
+            what you see and have a project you need coded,
+            don’t hestiate to contact me.
+        </p>
+        <p class="social-media">LETS CONNECT</p> 
+        <ul class="social-media-icons"> 
+          <li><a href=""><img src="images/twitter.png" class="twitter" alt=""></a></li>
+          <li><a href=""><img src="images/Linkedin-icon.png" class="linkedin" alt=""></a></li>
+          <li><a href=""><img src="images/M-vector.png" class="m-vector" alt=""></a></li>
+          <li><a href=""><img src="images/github.png" class="github" alt=""></a></li>
+          <li><a href=""><img src="images/Fing-vector.png" class="fing-vector" alt=""></a></li>
+        </ul>
+    </section>
+      
 </body>
 </html>
