--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             feature or website Look through some 
             of my work and experience! If you like 
             what you see and have a project you need coded,
-            don’t hestiate to contact me.
+            don’t hesitate to contact me.
         </p>
         <p class="social-media">LETS CONNECT</p> 
         <ul class="social-media-icons"> 
