--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     </header>
 
     <!--Headline Section-->
+
+    <main class="main">
     <section class="headline"> 
         <h1 class="primary1">I'm Selma <br> Glad to see <br>you</h1>
         
@@ -71,19 +73,17 @@
         <div class="card-works">
           <img src="images/snapshot2.png"  alt="">
           <div class="card-works-content2">
-            <h2 class="title multi-post">Multi-Post Stories</h2>
+            <h2 class="title multi-post">Multi-Post <br> Stories</h2>
             <ul class="frame">
-              <li class="list-item canopy">FACEBOOK</li>
-              <li class="list-item role">Full Stack Dev</li>
+              <li class="list-item canopy">CANOPY</li>
+              <li class="list-item role">Back End Dev</li>
               <li class="list-item year">2015</li>
             </ul>
             <div class="desc-title">
-              <p class="primary-text2"> Experimental content 
-              creation feature that allows users to add to an existing story over the course of a day without spamming their friends.
-              </p>
+              <p class="primary-text2"> A daily selection of privately personalized reads;
+                no accounts or sign-ups required.</p>
               <ul class="tags">
                 <li class="tag html-tag">html</li>
-                <li class="tag ruby-tag">Ruby on rails</li>
                 <li class="tag css-tag">css</li>
                 <li class="tag js-tag">javaScript</li>
               </ul>
@@ -95,21 +95,18 @@
         <div class="card-works">
           <img src="images/snapshot3.png"  alt="">
           <div class="card-works-content1">
-            <h2 class="title facebook360">Facebook 360</h2>
+            <h2 class="title tonic">Tonic</h2>
             <ul class="frame">
-              <li class="list-item canopy">FACEBOOK</li>
-              <li class="list-item role">Full Stack Dev</li>
+              <li class="list-item canopy">CANOPY</li>
+              <li class="list-item role">Back End Dev</li>
               <li class="list-item year">2015</li>
             </ul>
             <div class="desc-title">
-              <p class="primary-text2"> Exploring the future of 
-              media in Facebook's first Virtual Reality app; a 
-              place to discover and enjoy 360 photos and videos on 
-              Gear VR. 
+              <p class="primary-text2"> A daily selection of privately personalized reads;
+                no accounts or sign-ups required.
               </p>
               <ul class="tags">
                 <li class="tag html-tag">html</li>
-                <li class="tag ruby-tag">Ruby on rails</li>
                 <li class="tag css-tag">css</li>
                 <li class="tag js-tag">javaScript</li>
               </ul>
@@ -121,20 +118,18 @@
         <div class="card-works">
           <img src="images/snapshot4.png"  alt="">
           <div class="card-works-content2">
-            <h2 class="title ubernavigation">Uber Navigation</h2>
+            <h2 class="title multi-post">Multi-Post <br> Stories</h2>
             <ul class="frame">
-              <li class="list-item canopy">Uber</li>
-              <li class="list-item role">Lead Developer </li>
-              <li class="list-item year"> 2018 </li>
+              <li class="list-item canopy">CANOPY</li>
+              <li class="list-item role">Back End Dev </li>
+              <li class="list-item year"> 2015 </li>
             </ul>
             <div class="desc-title">
-              <p class="primary-text2">  A smart assistant to make 
-              driving more safe, efficient, and fun by unlocking
-               your most expensive computer: your car. 
+              <p class="primary-text2"> A daily selection of privately personalized reads;
+                no accounts or sign-ups required. 
               </p>
               <ul class="tags">
                 <li class="tag html-tag">html</li>
-                <li class="tag ruby-tag">Ruby on rails</li>
                 <li class="tag css-tag">css</li>
                 <li class="tag js-tag">javaScript</li>
               </ul>
@@ -142,7 +137,7 @@
             </div>
           </div>
         </div>
-      </section>
-      
+    </section>
+    </main>
 </body>
 </html>
