Create About me Section

--- a/index.html
+++ b/index.html
@@ -138,6 +138,70 @@
           </div>
         </div>
     </section>
+
+    <!--About-Section-->
+    <section class="about">
+      <div class="top">
+        <h2 class="about-title">About <br> Myself</h2>
+        <p class="hello">Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have
+                a project you need coded, don’t hestitate to contact me.</p>
+        <div class="Social-media-layout">
+          <p class="social-media">LETS CONNECT</p> 
+          <ul class="social-media-icons">
+            <li><a href=""><img src="images/twitter.png" class="twitter" alt=""></a></li>
+            <li><a href=""><img src="images/Linkedin-icon.png" class="linkedin" alt=""></a></li>
+            <li><a href=""><img src="images/M-vector.png" class="m-vector" alt=""></a></li>
+            <li><a href=""><img src="images/github.png" class="github" alt=""></a></li>
+            <li><a href=""><img src="images/Fing-vector.png" class="fing-vector" alt=""></a></li>
+          </ul>
+        </div> 
+        <button type="button" class="about-btn">Get My Resume</button>
+      </div>
+      <div class="skills-list">
+        <div class="frame-languages">
+          <ul class="languages">
+            <li class="lang">Languages</li>
+            <li class="arrow">
+              <img src="images/down-arrow.png" alt=""/>
+            </li>
+          </ul>
+          <ul class="frame2">
+            <li class="language1 list">
+              <img src="images/js-icon.png" class="javascript" alt="javascript" />
+              <p class="language">Javascript</p>
+            </li>
+            <li class="language1 list">
+              <img src="images/html-icon.png" class="html" alt="HTML5" />
+              <p class="language">HTML</p>
+            </li>
+            <li class="language1 list">
+              <img src="images/css-icon.png" class="css" alt="CSS" />
+              <p class="language">CSS</p>
+            </li>
+          </ul>
+        </div>
+        <div class="frame-frameworks">
+          <ul class="frameworks">
+            <li class="lang">Frameworks</li>
+            <li class="arrow">
+              <img src="images/right-arrow.png" alt=""/>
+            </li>
+          </ul>
+        </div>
+        <hr class="solid" />
+        <div class="frame-skills">
+          <ul class="skills">
+            <li class="lang">Skills</li>
+            <li class="arrow">
+              <img src="images/right-arrow.png" alt=""/>
+            </li>
+          </ul>
+        </div>
+            <hr class="solid" />
+          </li>
+        </div>
+      </div>
+    </section>
     </main>
 </body>
 </html>
