fix linter errors

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <li class="tag css-tag">css</li>
                 <li class="tag js-tag">javaScript</li>
               </ul>
-            <button class="btn action">See Projects</button>
+            <button type="button" class="btn action">See Projects</button>
             </div>
             </div>
         </div>
@@ -87,7 +87,7 @@
                 <li class="tag css-tag">css</li>
                 <li class="tag js-tag">javaScript</li>
               </ul>
-              <button class="btn action">See Projects</button>
+              <button type="button" class="btn action">See Projects</button>
             </div>
           </div>
         </div>
@@ -110,7 +110,7 @@
                 <li class="tag css-tag">css</li>
                 <li class="tag js-tag">javaScript</li>
               </ul>
-              <button class="btn action">See Projects</button>
+              <button type="button" class="btn action">See Projects</button>
             </div>
           </div>
         </div>
@@ -133,7 +133,7 @@
                 <li class="tag css-tag">css</li>
                 <li class="tag js-tag">javaScript</li>
               </ul>
-              <button class="btn action">See Projects</button>
+              <button type="button" class="btn action">See Projects</button>
             </div>
           </div>
         </div>
