Update index.html file

--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
                 <li class="tag css-tag">css</li>
                 <li class="tag js-tag">javaScript</li>
               </ul>
-              <button type="button" class="btn action">See Projects</button>
+              <a href="">
+                <button type="button" class="btn action">See Projects</button>
+              </a>
             </div>
           </div>
         </div>
