fix linters error

--- a/index.html
+++ b/index.html
@@ -87,9 +87,7 @@
                 <li class="tag css-tag">css</li>
                 <li class="tag js-tag">javaScript</li>
               </ul>
-              <a href="">
-                <button type="button" class="btn action">See Projects</button>
-              </a>
+              <button type="button" class="btn action"><a href="#">See Projects</a></button>
             </div>
           </div>
         </div>
