fix linter error

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <li class="tag css-tag">css</li>
                 <li class="tag js-tag">javaScript</li>
               </ul>
-              <button type="button" class="btn action"><a href="#">See Projects</a></button>
+              <a href="#"><input type="button" class="btn action" value="See Projects"></a>
             </div>
           </div>
         </div>
