fix linter error

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <li class="tag css-tag">css</li>
                 <li class="tag js-tag">javaScript</li>
               </ul>
-              <a href="#"><input type="button" class="btn action" value="See Projects"></a>
+              <button onclick="window.location.href='#'" type="button" class="btn action">See Projects</button>
             </div>
           </div>
         </div>
