--- a/index.html
+++ b/index.html
@@ -200,7 +200,24 @@
         <hr class="solid" />
       </div>
     </section>
-    <form action=""></form>
   </main>
+  <footer class="footer">
+    <div class="contact">
+      <h2 class="contact-title">Contact me</h2>
+      <p class="contact-description">If you have an application you are interested in developing, a feature that you need
+          built or a project that needs coding. I'd love to help with it </p>
+    <form action="https://formspree.io/f/xwkydypy" id="form" class="form" method="post">
+      <ul class="inner-list">
+        <li><input type="text" class="form-control" placeholder="Full name" name="name" id="name" size="40" maxlength="30" required>
+        </li>
+        <li><input type="email" class="form-control" name="email" id="email" placeholder="Email address" required>
+        </li>
+        <li><textarea name="text" class="form-control" id="text" placeholder="Message" maxlength="500" required></textarea></li>
+        <li class="flex-item6" id="submit-btn"><button type="submit">Get In Touch</button></li>
+      </ul>
+    </form>
+    <div class="shape"><img src="./images/Shape.png" alt="shape"></div>
+    </div>
+  </footer>
 </body>
 </html>
