Add Desktop Toolbar and Headline Section

--- a/index.html
+++ b/index.html
@@ -20,13 +20,18 @@
                 <img src="images/Union.png" alt="">
             </a>
         </nav>
+        <nav class="menu">
+          <a href="#">Portfolio</a>
+          <a href="#">About</a>
+          <a href="#">Contact</a>
+        </nav>
     </header>
 
     <!--Headline Section-->
 
     <main class="main">
     <section class="headline"> 
-        <h1 class="primary1">I'm Selma <br> Glad to see <br>you</h1>
+        <h1 class="primary1">I'm Selma, <br> Glad to see you</h1>
         
         <p>I’m a software developer!
             I can help you build a product , 
