Update the Headline Section

--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
             what you see and have a project you need coded,
             don’t hesitate to contact me.
         </p>
-        <p class="social-media">LETS CONNECT</p>
       </div>
+      <div class="social-media">
+        <p> LET'S CONNECT</p>
         <ul class="social-media-icons"> 
           <li><a href=""><img src="images/twitter.png" class="twitter" alt=""></a></li>
           <li><a href=""><img src="images/Linkedin-icon.png" class="linkedin" alt=""></a></li>
@@ -50,6 +51,7 @@
           <li><a href=""><img src="images/github.png" class="github" alt=""></a></li>
           <li><a href=""><img src="images/Fing-vector.png" class="fing-vector" alt=""></a></li>
         </ul>
+      </div>
     </section>
   
 
