Update About Section and footer

--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@
             </div>
           </div>
         </div>
-        <div>
+        <div class="work-bottom">
+          <p>This is a work bottom</p>
         </div>
     </section>
 
@@ -165,7 +166,7 @@
         <p class="hello">Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have
                 a project you need coded, don’t hestitate to contact me.</p>
         <div class="Social-media-layout">
-          <p class="social-media">LETS CONNECT</p> 
+          <p class="social-media">LET'S CONNECT</p> 
           <ul class="social-media-icons">
             <li><a href=""><img src="images/twitter.png" class="twitter" alt=""></a></li>
             <li><a href=""><img src="images/Linkedin-icon.png" class="linkedin" alt=""></a></li>
@@ -212,7 +213,7 @@
           <ul class="skills">
             <li class="lang">Skills</li>
             <li class="arrow">
-              <img src="images/right-arrow.png" alt=""/>
+              <img src="images/right-arrow.png" alt="" class="skills-arrow"/>
             </li>
           </ul>
         </div>
