--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <p class="hello">Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have
                 a project you need coded, don’t hestitate to contact me.</p>
         <div class="Social-media-layout">
-          <p class="social-media">LET'S CONNECT</p> 
+          <p class="social-media-connect">LET'S CONNECT</p> 
           <ul class="social-media-icons">
             <li><a href=""><img src="images/twitter.png" class="twitter" alt=""></a></li>
             <li><a href=""><img src="images/Linkedin-icon.png" class="linkedin" alt=""></a></li>
@@ -179,10 +179,10 @@
       </div>
       <div class="skills-list">
         <div class="frame-languages">
-          <ul class="languages">
+          <ul   class="languages">
             <li class="lang">Languages</li>
             <li class="arrow">
-              <img src="images/down-arrow.png" alt=""/>
+              <img src="images/down-arrow.png" alt="" class="down-arrow"/>
             </li>
           </ul>
           <ul class="frame2">
