--- a/index.html
+++ b/index.html
@@ -7,24 +7,27 @@
     <title>Selma Hamutenya Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
     <!--Toolbar Section-->
     <header>
-        <a href="" class="logo">
-            Selma Hamutenya
-        </a>
-        <nav class="burger">
-            <a href="" class="union">
-                <img src="images/Union.png" alt="menu-links">
-            </a>
-        </nav>
-        <nav class="menu">
-          <a href="#">Portfolio</a>
-          <a href="#">About</a>
-          <a href="#">Contact</a>
-        </nav>
+      <a href="" class="logo">
+        Selma Hamutenya
+      </a>
+      <div id="union" class="burger fas fa-bars"></div>
+      <nav class="menu">
+        <a href="#Portfolio">Portfolio</a>
+        <a href="#About">About</a>
+        <a href="#Contact">Contact</a>
+      </nav>
+      <ul class="desktop-menu">
+        <li><a href="#Portfolio">Portfolio</a></li>
+        <li><a href="#About">About</a></li>
+        <li><a href="#Contact">Contact</a></li>
+      </ul>
+
     </header>
 
     <!--Headline Section-->
