Update index.html file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <!--Toolbar Section-->
-    <header>
+    <header class="navigation">
       <a href="" class="logo">
         Selma Hamutenya
       </a>
@@ -27,7 +27,6 @@
         <li><a href="#About">About</a></li>
         <li><a href="#Contact">Contact</a></li>
       </ul>
-
     </header>
 
     <!--Headline Section-->
@@ -59,7 +58,7 @@
   
 
     <!--Works Section-->
-    <section class="works">
+    <section class="works" id="Portfolio">
       <div class="card-works card-works1">
         <img src="images/snapshot5.png"  alt="first-project" class="snapshotdesktop1">
         <div class="card-works-content1">
@@ -163,7 +162,7 @@
     </section>
 
     <!--About-Section-->
-    <section class="about">
+    <section class="about" id="About">
       <div class="top">
         <h2 class="about-title">About <br> Myself</h2>
         <p class="hello">Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have
@@ -225,7 +224,7 @@
     </section>
   </main>
   <footer class="footer">
-    <div class="contact">
+    <div class="contact" id="Contact">
       <h2 class="contact-title">Contact me</h2>
       <p class="contact-description">If you have an application you are interested in developing, a feature that you need
           built or a project that needs coding. I'd love to help with it </p>
@@ -242,5 +241,6 @@
     <div class="shape"><img src="./images/Shape.png" alt="shape"></div>
     </div>
   </footer>
+  <script src="main.js"></script>
 </body>
 </html>
