--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <h2 class="contact-title">Contact me</h2>
       <p class="contact-description">If you have an application you are interested in developing, a feature that you need
           built or a project that needs coding. I'd love to help with it </p>
-    <form action="https://formspree.io/f/xwkydypy" id="form" class="contact-form" method="post">
+    <form action="https://formspree.io/f/xwkydypy" id="form" class="contact-form" method="post" novalidate>
       <ul class="inner-list">
         <li><input type="text" class="form-control" placeholder="Full name" name="name" id="name" size="40" maxlength="30" required>
         </li>
